Add the points to the scene

--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,6 @@ body,
 }
 
 #viewDiv {
-  height: 500px;
-  width: 500px;
-}
-
-#angleSlider {
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
+  height: 100%;
+  width: 100%;
 }
